--- a/authuser/pom.xml
+++ b/authuser/pom.xml
@@ -78,6 +78,10 @@
 			<version>3.1.1</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-hateoas</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
